# stellar-forge

./: .dependency-cruiser.cjs  .gitignore  AGENTS.MD  CHANGELOG.md  CLAUDE.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  package-lock.json  package.json  tsconfig.depcruise.json
.agents/skills/stellar-forge/: SKILL.md
.agents/skills/stellar-forge/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/agents/: ci-quality-gate-auditor.md  crates-homebrew-publisher.md  generated-stack-stress-qa.md  generated-workspace-e2e.md  heavy-integration-lab-runner.md  idempotence-resilience-auditor.md  json-contract-qa.md  linux-package-publisher.md  publish-ci-security-auditor.md  release-artifact-readiness-auditor.md  rust-cli-test-architect.md  stellar-cli-live-smoke-qa.md
.claude/homunculus/instincts/inherited/: stellar-forge-instincts.yaml
.claude/skills/ci-offline-quality-gates/: SKILL.md
.claude/skills/generated-stack-stress-testing/: SKILL.md
.claude/skills/generated-workspace-e2e-testing/: SKILL.md
.claude/skills/heavy-integration-test-lab/: SKILL.md
.claude/skills/idempotence-resilience-testing/: SKILL.md
.claude/skills/live-stellar-smoke-testing/: SKILL.md
.claude/skills/package-manager-publishing-ci/: SKILL.md
.claude/skills/publish-ci-security-gates/: SKILL.md
.claude/skills/release-artifact-readiness/: SKILL.md
.claude/skills/release-publish-orchestrator/: SKILL.md
.claude/skills/rust-cli-contract-testing/: SKILL.md
.claude/skills/stellar-forge-test-harness-orchestrator/: SKILL.md
.codex/: AGENTS.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  support_question.yml
.github/scripts/: render-homebrew-formula.py  resolve-cargo-license-metadata.py
.github/workflows/: ci.yml  release.yml
_workspace/test-harness/: 03_support_helpers.md  04_generated_workspace_sync.md
demo/: .env.example  .gitignore  README.md  stellarforge.lock.json  stellarforge.toml
demo/apps/api/: .env.example  openapi.json  package.json
demo/apps/api/db/: schema.sql
demo/apps/api/src/: server.ts
demo/apps/api/src/lib/: config.ts  errors.ts  events-store.ts  manifest.ts
demo/apps/api/src/routes/: contracts.ts  (+5 more)
demo/apps/web/: index.html  package.json
demo/apps/web/scripts/: ui-browser-smoke.mjs  ui-smoke.mjs
demo/apps/web/src/: main.tsx
demo/contracts/app/: Cargo.toml  README.md  rust-toolchain.toml
demo/contracts/app/src/: lib.rs  test.rs
demo/scripts/: doctor.mjs  release.mjs  reseed.mjs
demo/workers/events/: cursors.json  ingest-events.mjs
docs/: README.md  command-reference.md  deployment-guide.md  manifest-reference.md  release-publishing.md  testing-strategy.md
scripts/: generated-frontend-browser-smoke.mjs
snap/: snapcraft.yaml
src/: cli.rs  commands.rs  lib.rs  main.rs  model.rs  runtime.rs  templates.rs
src/commands/: doctor.rs  events.rs  release.rs  token.rs  wallet.rs
tests/: backlog_command_behaviors.rs  batch_file_commands.rs  cargo_license_metadata.py  cli.rs  cli_command_matrix.rs  dev_snapshot_commands.rs  doctor_fix_scopes.rs  events_backfill.rs  generated_stack_stress.rs  generated_workspace_sync.rs  heavy_integration_lab.rs  homebrew_formula_render.py  json_report_contracts.rs  planned_commands_docs.rs  project_smoke_browser.rs  release_commands.rs  release_history.rs  release_prune.rs  release_status_diff.rs  scenario_commands.rs  stellar_cli_boundary.rs  wallet_policy.rs  wallet_smart_future_commands.rs
tests/support/: mod.rs
(+4 files in other folders)
