[package]
name = "stellar-forge"
version = "0.1.0"
edition = "2024"
description = "Rust CLI for manifest-driven Stellar workspaces, scaffolding, validation, dry-runs, release planning, and generated project tooling."
repository = "https://github.com/Pantani/stellar-forge"
homepage = "https://github.com/Pantani/stellar-forge"
readme = "README.md"
keywords = ["stellar", "soroban", "cli", "web3", "scaffold"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".claude/**", ".github/**", "_workspace/**", "AGENTS.MD", "CLAUDE.MD"]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
shell-escape = "0.1.5"
toml = "1.1.2"
url = "2.5.7"
walkdir = "2.5.0"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.2.2"
tempfile = "3.23.0"
