[package]
name = "stellar-forge"
version = "0.1.0"
edition = "2024"
authors = ["Pantani"]
description = "Rust CLI for manifest-driven Stellar workspaces, scaffolding, validation, dry-runs, release planning, and generated project tooling."
license = "MIT"
repository = "https://github.com/Pantani/stellar-forge"
homepage = "https://github.com/Pantani/stellar-forge"
readme = "README.md"
keywords = ["stellar", "soroban", "cli", "web3", "scaffold"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".claude/**", ".github/**", "_workspace/**", "AGENTS.MD", "CLAUDE.MD"]

[package.metadata.deb]
maintainer = "Pantani <pantani@users.noreply.github.com>"
copyright = "2026 Pantani, MIT"
license-file = ["LICENSE", "0"]
extended-description = "stellar-forge orchestrates manifest-driven Stellar workspaces, generated project scaffolds, diagnostics, dry-runs, lockfiles, and release planning on top of the official Stellar CLI."
depends = "$auto"
section = "devel"
priority = "optional"
assets = [
  ["target/release/stellar-forge", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/stellar-forge/README.md", "644"],
  ["CHANGELOG.md", "usr/share/doc/stellar-forge/CHANGELOG.md", "644"],
  ["LICENSE", "usr/share/doc/stellar-forge/LICENSE", "644"],
]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
shell-escape = "0.1.5"
toml = "1.1.2"
url = "2.5.7"
walkdir = "2.5.0"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.2.2"
tempfile = "3.23.0"
